--- a/src/Components/Home/Home.sass
+++ b/src/Components/Home/Home.sass
@@ -1,8 +1,47 @@
-.app
-  width: 40%
-  margin: 1rem auto
-  text-align: center
+@import '../../Styles/style.sass'
 
-  .app__logo
-    width: 20rem
-    border-radius: 100%
+.name
+  width: 25%
+  margin: 1rem auto
+  text-align: left
+  color: $white-0
+  position: absolute
+  top: 20%
+  left: 15%
+
+  &__profession
+    color: $white-5
+    font-weight: 300
+    font-size: 2.2rem
+
+  &__gabriel
+    font-size: 5rem
+    margin: 0
+    font-weight: 200
+    color: $orange-2 
+    font-family: Georgia, 'Times New Roman', Times, serif
+
+  &__line
+    width: 100%
+    border: 1px solid $white-4
+
+  &__about
+    font-color: $white-5
+    font-size: 2.1rem
+    font-weight: 400
+    letter-spacing: 1px
+    margin-top: 12%
+    margin-bottom: 25%
+
+// Animation
+.anim 
+  opacity: 0
+
+// Animation
+@keyframes anim_one
+  from
+    transform: translateX(-120px)
+    opacity: 0
+  to
+    transform: translateY(0)
+    opacity: 1
