--- a/src/Styles/base/_base.sass
+++ b/src/Styles/base/_base.sass
@@ -2,8 +2,9 @@ html
   font-size: 62.5%
 
 body
-  font-family: Helvetica, Arial, sans-serif
+  font-family: 'Lato', Helvetica, Arial, sans-serif
   font-size: $m-size
+  background-color: $bg-dark
 
 button
   cursor: pointer
@@ -15,9 +16,15 @@ ol, ul
   padding: 0
   margin: 0
 
+.btn
+  +btn
+
+  &--orange
+    +btn--orange
+
 // Router styling
 .router-link
-  color: #eeeeee
+  color: $orange-2
   transition: all 0.3s
   text-decoration: none
   font-size: 1.8rem
