--- a/src/Styles/base/_variables.sass
+++ b/src/Styles/base/_variables.sass
@@ -7,3 +7,11 @@ $l-size: 3.2rem;
 $xl-size: 4.8rem;
 
 $desktop-breakpoint: 45rem;
+
+// Colors
+$bg-dark: #1C2023
+$orange-2: #DA9E35
+$white-0: #f3f3f3
+$white-4: #c7c9c9
+$white-5: #B4B6B6
+$white-8: #5E6267
