Finish splash page & connect work component to main app

--- a/src/Styles/base/_variables.sass
+++ b/src/Styles/base/_variables.sass
@@ -10,8 +10,10 @@ $desktop-breakpoint: 45rem;
 
 // Colors
 $bg-dark: #1C2023
+$border-dark: #2d3337
 $orange-2: #DA9E35
+$orange-3: #faaf14
 $white-0: #f3f3f3
 $white-4: #c7c9c9
 $white-5: #B4B6B6
-$white-8: #5E6267
+$white-8: #353d42
