--- a/src/Components/Home/Home.sass
+++ b/src/Components/Home/Home.sass
@@ -1,5 +1,12 @@
 @import '../../Styles/style.sass'
 
+.welcome
+  height: 100vh
+  background-image: url('../../Styles/images/Union.png')
+  background-repeat: no-repeat
+  background-size: cover
+  border-bottom: 1px solid $border-dark
+
 .name
   width: 25%
   margin: 1rem auto
@@ -7,7 +14,7 @@
   color: $white-0
   position: absolute
   top: 20%
-  left: 15%
+  left: 12%
 
   &__profession
     color: $white-5
@@ -21,9 +28,17 @@
     color: $orange-2 
     font-family: Georgia, 'Times New Roman', Times, serif
 
+  &__gabriel:before
+      content: ""
+      display: inline-block
+      width: 8px
+      height: 38px
+      margin-right: 10px
+      background: $orange-2
+
   &__line
     width: 100%
-    border: 1px solid $white-4
+    border-bottom: 1px solid $white-4
 
   &__about
     font-color: $white-5
@@ -31,17 +46,113 @@
     font-weight: 400
     letter-spacing: 1px
     margin-top: 12%
-    margin-bottom: 25%
+  
+  &__social-medias
+    display: flex
+    margin-bottom: 20%
+    list-style: none
+
+    li
+      margin-right: 5%
+
+      a 
+        .svg-icon
+          height: 32px
+
+// About
+.skills
+  width: 40%
+  position: absolute
+  top: 60%
+  left: 50%
+  display: flex
+  flex-direction: row-reverse
+
+  &__inner
+    margin: 0 7rem
+    opacity: 0
+
+  .skills-1
+    position: relative
+    bottom: 300px
+
+  .skills-2
+    position: relative
+    bottom: 150px
+
+  &__title
+    color: $white-5
+    font-weight: 300
+    position: relative
+    right: 40%
+    text-transform: uppercase
+
+  &__item
+    color: $white-0
+    list-style: none
+    font-weight: 600
+    font-size: 2rem
+    margin-top: 18%
+
+// Arrow
+.arrow-down
+  position: absolute
+  bottom: 0%
+  width: 100%
+  text-align: center
+
+  &__text
+    color: $white-8
+    font-size: 2rem
+
+  &__arrow
+    color: $white-5
+    font-size: 3rem
+    font-weight: 600
+    margin: 2rem 0
+    animation: bounce 3s infinite
 
 // Animation
-.anim 
+.anim_left, .anim_right, .anim_top
   opacity: 0
 
 // Animation
-@keyframes anim_one
+@keyframes anim_from_left
   from
     transform: translateX(-120px)
     opacity: 0
   to
     transform: translateY(0)
     opacity: 1
+
+@keyframes anim_from_right
+  from
+    transform: translateX(120px)
+    opacity: 0
+  to
+    transform: translateY(0)
+    opacity: 1
+
+@keyframes anim_from_top
+  from
+    transform: translateY(-100px)
+    opacity: 0
+  to
+    transform: translateY(0)
+    opacity: 1
+
+@keyframes bounce
+  0%
+    transform: translateY(0px)
+  20%
+    transform: translateY(0px)
+  40%
+    transform: translateY(0px)
+  60%
+    transform: translateY(0px)
+  75%
+    transform: translateY(-10px)
+  80%
+    transform: translateY(-10px)
+  100%
+    transform: translateY(0px)
