--- a/src/Styles/base/_mixers.sass
+++ b/src/Styles/base/_mixers.sass
@@ -5,6 +5,7 @@
   color: white
   padding: 5px 20px
   text-decoration: none
+  font-size: 1.7rem
 
   transition: 0.2s
   &:hover
@@ -13,10 +14,11 @@
     border-radius: 3px
 
 =btn--orange
-  border: 2px solid $orange-2
+  border: 2px solid $orange-3
 
   transition: 0.2s
   &:hover
-    background: $orange-2
+    background: $orange-3
+    box-shadow: 0px 0px 11px $orange-2
     color: black
     border-radius: 5px
