Finish work section

--- a/src/Components/Work/Work.sass
+++ b/src/Components/Work/Work.sass
@@ -5,15 +5,15 @@
   margin: 5%
   width: 90%
   margin: 5%
-  overflow: hidden
-  grid-template-columns: repeat(3, 1fr)
+  grid-template-columns: repeat(2, 1fr)
 
   &__work
-    margin: 0 auto
+    margin: 10% auto
     width: 95%
-    height: 350px
+    height: 550px
+    overflow: hidden
     background-size: cover
-    box-shadow: 0px -20px 0px #161616
+    box-shadow: 0px 0px 25px #161616
 
   .work-about
     background: red
@@ -23,7 +23,7 @@
       font-size: 3rem
 
   .work-darkBackground
-    height: 350px
+    height: 550px
     width: 100%
     position: relative
     bottom: 0
@@ -36,10 +36,9 @@
   .work-about
     position: relative
     bottom: -10px
-    height: 7.4rem
-    background: #171b1e
-    margin: 0
-    padding: 15px
+    height: 25%
+    background: #0f1113
+    padding: 5px 0 0 22px
     z-index: 10
     box-shadow: 0px -5px 10px -4px #14190f
     transition: all 0.4s
@@ -47,15 +46,33 @@
 
     h2
       font-size: 1.7rem
-      margin: 0
       color: $white-0
+
+    .tech-list
+      display: flex
+
+      &__item
+        color: $orange-3
+        margin-right: 1.5%
+        list-style: none
+    
+    .links-list
+      bottom: 30px
+      display: flex
+      justify-content: flex-end
+      margin-right: 2%
+      position: relative
+      list-style-type: none
+      
+      li
+        margin-left: 1.5%
 
     p
       color: $white-0
       width: 60%
 
 .work-container__work:hover .work-about
-  bottom: 25%
+  bottom: 23%
 
 .work-container__work:hover .work-darkBackground
   bottom: 100%
