--- a/src/Styles/base/_mixers.sass
+++ b/src/Styles/base/_mixers.sass
@@ -1,17 +1,22 @@
 @import './_variables.sass'
 
 =btn
-  border: 2px solid white
-  color: white
+  border: 2px solid $white-0
+  color: $white-0
   padding: 5px 20px
   text-decoration: none
   font-size: 1.7rem
 
   transition: 0.2s
   &:hover
-    background: white
+    background: $white-0
     color: black
     border-radius: 3px
+
+=btn--small
+  padding: 2px 10px
+  font-size: 1.5rem
+  border: 1px solid $white-0
 
 =btn--orange
   border: 2px solid $orange-3
